--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title: "Chonghao Qiu / Site Title"
 title_separator: "-"
 name: &name "Chonghao Qiu"
 description: &description "personal description"
-url: https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://chonghao-qiu.github.io/ChonghaoQiu # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "" # the subpath of your site, e.g. "/blog"
-repository: "academicpages/academicpages.github.io"
+repository: "chonghao-qiu.github.io/ChonghaoQiu"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
