--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator: "-"
 name: &name "Chonghao Qiu"
 description: &description "personal description"
 url: https://chonghao-qiu.github.io/ChonghaoQiu # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "" # the subpath of your site, e.g. "/blog"
+baseurl: "https://chonghao-qiu.github.io/ChonghaoQiu" # the subpath of your site, e.g. "/blog"
 repository: "chonghao-qiu.github.io/ChonghaoQiu"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
