--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: "Chonghao Qiu / Site Title"
 title_separator: "-"
 name: &name "Chonghao Qiu"
 description: &description "personal description"
-url: https://chonghao-qiu.github.io/ChonghaoQiu # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://chonghao-qiu.github.io/ChonghaoQiu"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "https://chonghao-qiu.github.io/ChonghaoQiu" # the subpath of your site, e.g. "/blog"
 repository: "chonghao-qiu.github.io/ChonghaoQiu"
 
