--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name: &name "Chonghao Qiu"
 description: &description "personal description"
 url: "https://chonghao-qiu.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "" # "/ChonghaoQiu" # the subpath of your site, e.g. "/blog"
-repository: "/ChonghaoQiu"
+repository: ""
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
